objects/How_To__kav.object
<CustomObject>
    <articleTypeChannelDisplay>
        <articleTypeTemplates>
            <channel>App</channel>
            <template>Toc</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Prm</channel>
            <template>Toc</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Csp</channel>
            <template>Toc</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Pkb</channel>
            <template>Toc</template>
        </articleTypeTemplates>
    </articleTypeChannelDisplay>
    <fields>
        <fullName>Additional_Information__c</fullName>
        <label>Additional Information</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Additional_Resources__c</fullName>
        <label>Additional Resources</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Chat_Answer__c</fullName>
        <label>Chat Answer</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <label>External ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Internal_Comments__c</fullName>
        <label>Internal Comments</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Procedure__c</fullName>
        <label>Procedure</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Topic__c</fullName>
        <label>Topic</label>
        <type>TextArea</type>
    </fields>
    <label>How To</label>
    <pluralLabel>How To</pluralLabel>
</CustomObject>